methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:51: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime10.MethodsPicture'
override def run() {
             ^